--- a/index.html
+++ b/index.html
@@ -18,27 +18,31 @@
         const canvas = document.getElementById('myCanvas');
         const ctx = canvas.getContext('2d');
         const circles = [
-            { x: 100, y: 100, radius: 70, color: 'red' },
-            { x: 200, y: 200, radius: 50, color: 'green' },
-            { x: 300, y: 100, radius: 30, color: 'blue' }
+            { x: 100, y: 100, radius: 70, color: 'red', text: "Short text" },
+            { x: 200, y: 200, radius: 50, color: 'green', text: "Longer text Longer" },
+            { x: 300, y: 100, radius: 30, color: 'blue', text: "And very long text - pravda, dobro, krása" }
         ];
         let selectedCircle = null;
 
+        /*
         ctx.beginPath();
         ctx.arc(200, 200, 100, 0, 2 * Math.PI);
         ctx.stroke();
+        */
 
         // Add text around the circle
-        const text = "Short text";
+        //const text = "Short text";
         ctx.font = "16px Arial";
         ctx.textAlign = "center";
         ctx.textBaseline = "middle";
 
+        /*
         const radius = 89;
         const angleStep = (Math.PI * 2) / text.length;
         const startAngle = Math.PI;
         const endAngle = 2 * Math.PI;
-
+        */
+/*
         for (let i = 0; i < text.length; i++) {
             //const angle = i * angleStep;
             const angle = startAngle + (i / text.length) * (endAngle - startAngle);
@@ -50,33 +54,100 @@
             ctx.fillText(text[i], 0, 0);
             ctx.restore();
         }
+        */
 
         function drawCircles() {
-            //ctx.clearRect(0, 0, canvas.width, canvas.height);
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
             circles.forEach(circle => {
                 ctx.beginPath();
                 ctx.arc(circle.x, circle.y, circle.radius, 0, 2 * Math.PI);
                 ctx.fillStyle = circle.color;
                 ctx.fill();
                 ctx.stroke();
+
+                // text placement
+                const radius = circle.radius;
+                const angleStep = (Math.PI * 2) / circle.text.length;
+                const startAngle = Math.PI;
+                const endAngle = 2 * Math.PI;
+
+                for (let i = 0; i < circle.text.length; i++) {
+                    //const angle = i * angleStep;
+                    const angle = startAngle + (i / circle.text.length) * (endAngle - startAngle);
+                    const x = circle.x + radius * Math.cos(angle);
+                    const y = circle.y + radius * Math.sin(angle);
+                    ctx.save();
+                    ctx.translate(x, y);
+                    ctx.rotate(angle + Math.PI / 2);
+                    ctx.fillStyle = 'black';
+                    ctx.fillText(circle.text[i], 0, 0);
+                    ctx.restore();
+                }
+
             });
+
+            //console.log( "end drawing" );
         }
 
-        function getTouchPos(canvas, touchEvent) {
+        function getTouchPos(canvas, event) {
+
             const rect = canvas.getBoundingClientRect();
             return {
-                x: touchEvent.touches[0].clientX - rect.left,
-                y: touchEvent.touches[0].clientY - rect.top
+                x: event.touches ? event.touches[0].clientX - rect.left : event.clientX - rect.left,
+                y: event.touches ? event.touches[0].clientY - rect.top : event.clientY - rect.top 
             };
         }
 
+
+        function handleStart( e ){
+            
+            //console.log( 'starting move ...' );
+            const touchPos = getTouchPos(canvas, e);
+            selectedCircle = circles.find(circle =>
+                Math.hypot(circle.x - touchPos.x, circle.y - touchPos.y) < circle.radius
+            );
+
+        }
+
+        function handleMove( e ){
+
+            //console.log( ' ... moving ...' );
+            if (selectedCircle) {
+                const touchPos = getTouchPos(canvas, e);
+                selectedCircle.x = touchPos.x;
+                selectedCircle.y = touchPos.y;
+                drawCircles();
+            }
+
+        }
+
+        function handleEnd(){
+
+            //console.log( '... end moving' );
+
+            selectedCircle = null;
+
+        }
+
+        canvas.addEventListener('touchstart', handleStart );
+        canvas.addEventListener('mousedown', handleStart );
+
+        canvas.addEventListener('touchmove', handleMove );
+        canvas.addEventListener('mousemove', handleMove );
+
+        canvas.addEventListener('touchend', handleEnd );
+        canvas.addEventListener('mouseup', handleEnd );
+
+/*
         canvas.addEventListener('touchstart', (e) => {
             const touchPos = getTouchPos(canvas, e);
             selectedCircle = circles.find(circle =>
                 Math.hypot(circle.x - touchPos.x, circle.y - touchPos.y) < circle.radius
             );
         });
+*/
 
+/*
         canvas.addEventListener('touchmove', (e) => {
             if (selectedCircle) {
                 const touchPos = getTouchPos(canvas, e);
@@ -85,12 +156,16 @@
                 drawCircles();
             }
         });
+*/
 
+/*
         canvas.addEventListener('touchend', () => {
             selectedCircle = null;
         });
+*/
 
         drawCircles();
+
     </script>
 </body>
 
