text adjustements, colors and others

--- a/index.html
+++ b/index.html
@@ -18,21 +18,15 @@
         const canvas = document.getElementById('myCanvas');
         const ctx = canvas.getContext('2d');
         const circles = [
-            { x: 100, y: 100, radius: 70, color: 'red', text: "Short text" },
-            { x: 200, y: 200, radius: 50, color: 'green', text: "Longer text Longer" },
-            { x: 300, y: 100, radius: 30, color: 'blue', text: "And very long text - pravda, dobro, krása" }
+            { x: 100, y: 100, radius: 7, color: "#ABD", text: "Pravda (hranice to / ne-to)" },
+            { x: 200, y: 200, radius: 5, color: "#87D", text: "Dobro" },
+            { x: 300, y: 100, radius: 3, color: "#12E", text: "Krása" }
         ];
+
         let selectedCircle = null;
 
-        /*
-        ctx.beginPath();
-        ctx.arc(200, 200, 100, 0, 2 * Math.PI);
-        ctx.stroke();
-        */
-
         // Add text around the circle
-        //const text = "Short text";
-        ctx.font = "16px Arial";
+        //ctx.font = "16px Arial";
         ctx.textAlign = "center";
         ctx.textBaseline = "middle";
 
@@ -55,27 +49,63 @@
             ctx.restore();
         }
         */
+        const order = [ 3, 5, 7, 9 ]
+
+        function countOfLetter( radius ){
+
+            result = 7;
+
+
+            for ( i = 0; order[i] <= radius; i++ ) {
+
+                result = result + order[i];             
+
+            }
+            
+            return ( result * 2 )
+        }
+
 
         function drawCircles() {
             ctx.clearRect(0, 0, canvas.width, canvas.height);
             circles.forEach(circle => {
                 ctx.beginPath();
-                ctx.arc(circle.x, circle.y, circle.radius, 0, 2 * Math.PI);
+
+                // 3,5,7,9 are available values
+                // radius for circle
+                radiusCircle = circle.radius * 10;
+                ctx.arc(circle.x, circle.y, radiusCircle, 0, 2 * Math.PI);
                 ctx.fillStyle = circle.color;
                 ctx.fill();
                 ctx.stroke();
 
                 // text placement
-                const radius = circle.radius;
-                const angleStep = (Math.PI * 2) / circle.text.length;
-                const startAngle = Math.PI;
-                const endAngle = 2 * Math.PI;
+                // radius for text
+                const radiusText = radiusCircle - 10;
+                //const angleStep = (Math.PI * 2) / circle.text.length;
+
+                countOfLetters = countOfLetter( circle.radius );
+                //console.log(circle.radius + " - pocet pismen: " + countOfLetters);
+                const angleStep = (Math.PI * 2) / countOfLetters;
+
+                //const startAngle = Math.PI;
+                //const endAngle = 2 * Math.PI;
+
+                fuga = ((( countOfLetters / 2 ) - circle.text.length ) /2 ) /  ( countOfLetters / 2 )  * Math.PI
+
+                //console.log( "fuga: " + fuga );
+
+                const startAngle = Math.PI + fuga + ( angleStep / 2 );
+                const endAngle = ( 2 * Math.PI ) - fuga;
+
+                textSize = 10 + circle.radius - 1;
+                ctx.font = textSize + "px Times";
 
                 for (let i = 0; i < circle.text.length; i++) {
                     //const angle = i * angleStep;
                     const angle = startAngle + (i / circle.text.length) * (endAngle - startAngle);
-                    const x = circle.x + radius * Math.cos(angle);
-                    const y = circle.y + radius * Math.sin(angle);
+                    const x = circle.x + radiusText * Math.cos(angle);
+                    const y = circle.y + radiusText * Math.sin(angle);
                     ctx.save();
                     ctx.translate(x, y);
                     ctx.rotate(angle + Math.PI / 2);
@@ -104,7 +134,7 @@
             //console.log( 'starting move ...' );
             const touchPos = getTouchPos(canvas, e);
             selectedCircle = circles.find(circle =>
-                Math.hypot(circle.x - touchPos.x, circle.y - touchPos.y) < circle.radius
+                Math.hypot(circle.x - touchPos.x, circle.y - touchPos.y) < ( circle.radius * 10 )
             );
 
         }
