--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             border: 1px solid black;
         }
     </style>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 
 <body>
