--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div style="font-family: 'Courier New', Courier, monospace; font-size: 12px;">
+    <div style="font-family: 'Courier New', Courier, monospace; font-size: 12px; color: #696969;">
         19ABD511Pravda (hranice to/ne-to)<br/>
         2778A724Dobro (rozvoj společný)<br/>
         35498933Krása (individuální)
