vyndani console.log

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             });
             
             // Log the array of circles to the console
-            console.log(circles);
+            //console.log(circles);
 
             drawCircles();
         }
