--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
         // Init TWA
         Telegram.WebApp.ready();
 
+        Telegram.WebApp.disableVerticalSwipes();
+
         // Event occurs whenever theme settings are changed in the user's Telegram app (including switching to night mode).
         Telegram.WebApp.onEvent('themeChanged', function() {
             document.documentElement.className = Telegram.WebApp.colorScheme;
