--- a/index.html
+++ b/index.html
@@ -235,11 +235,7 @@
                                 });
                                 */
 
-                                Telegram.WebApp.shareToStory({
-                                    media_url: imageUrl,
-                                    media_type: 'image', // nebo 'video' pro video
-                                    text: 'Check out this awesome image!'
-                                    })
+                                Telegram.WebApp.shareToStory(imageUrl)
 
                             });
                     } else {
