--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <p>
         <button onclick="parseData()">přepočítat</button>&nbsp;&nbsp;
         <button onclick="shareTS()">storýčko</button>&nbsp;&nbsp;
-        <button onclick="textToBot()">poslat</button>
+        <!--button onclick="textToBot()">poslat</button-->
         &nbsp;&nbsp;&nbsp;&nbsp;
         <button onclick="Telegram.WebApp.showAlert('1x idéčko \n1x velikost (1-9)\n3x barva v hex (AB8)\n1x transparentnost (1-9)\n1x border type (1 ..., 2 --, other normal)\n1x border thickness (1-9)\ntext');">?</button>
         </p>
@@ -251,7 +251,7 @@
             const text = document.getElementById('inputData').value
             console.log( "definice: " + text )
 
-            const data = { message: text };
+            const data = { type: 'text', content: text };
             Telegram.WebApp.sendData(JSON.stringify(data));
 
         }
